docs: add documentation for gradient animation

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   }
 }
 
+/**
+ * Gradient Shift Animation
+ * Creates a smooth, continuous background gradient animation
+ * Duration: 15s for subtle, elegant movement
+ */
 @keyframes gradientShift {
 
   0%,
